--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -1,8 +1,11 @@
 ---
-- name: Converge
+- name: Prepare
   hosts: all
   become: true
   gather_facts: false
+
+  vars:
+    kubectl_version: v1.22.10
 
   roles:
     - m18unet.kubectl
